# lv_zephyr

./: README.md
application/: CMakeLists.txt  prj.conf
application/src/: main.c
manifests/: imxrt1170-evk.json  m5stack_core2.json
